<resources>
    <string name="app_name">Task002</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="by_clicking_register_you_agree_to_terms_and_conditions">By clicking register you agree to Terms and Conditions</string>
    <string name="change_language">Change Language</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
