<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.task002.Fragment.RegisterFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:background="@drawable/input"
        android:hint="@string/full_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:background="@drawable/input"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="1">

        <Spinner
            android:id="@+id/spin_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.3"
            android:background="@drawable/list_small_en"
            android:paddingLeft="10dp"
            />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="0.7"
            android:background="@drawable/input_medium"
            android:hint="@string/phone_number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:background="@drawable/input"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


    <Spinner
        android:id="@+id/spin_country"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:background="@drawable/list_en"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


    <Spinner
        android:id="@+id/spin_city"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:background="@drawable/list_en"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" />


    <TextView
        android:id="@+id/tv_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:text="@string/by_clicking_register_you_agree_to_terms_and_conditions"
        android:textAlignment="center" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />

    <Button
        android:id="@+id/btn_change_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@drawable/btn_big_red"
        android:text="@string/change_language"
        android:textColor="@color/white" />


</LinearLayout>